minor changes to button colors in 2 views

--- a/TeamProject/Views/Join/Join.cshtml
+++ b/TeamProject/Views/Join/Join.cshtml
@@ -29,7 +29,7 @@
                     <span class="focus-input100"></span>
                 </div>
 
-                <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
+                <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@hotmail.com">
                     <span class="label-input100">Email</span>
                     <input class="input100" type="text" name="Email" placeholder="Email addess...">
                     @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
@@ -50,10 +50,10 @@
                     <span class="focus-input100"></span>
                 </div>
 
-                <div class="container-login100-form-btn">
-                    <div class="wrap-login100-form-btn">
-                        <div class="login100-form-bgbtn"></div>
-                        <button class="login100-form-btn">
+                <div class="container-login100-form-btn ">
+                    <div class="wrap-login100-form-btn ">
+                        <div class="login100-form-bgbtn "></div>
+                        <button class="login100-form-btn ">
                             Sign Up
                         </button>
                     </div>
