--- a/TeamProject/Views/Login/Index.cshtml
+++ b/TeamProject/Views/Login/Index.cshtml
@@ -9,7 +9,7 @@
         <h1 class="h3 mb-3 font-weight-normal">Sign in</h1>
         <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus name="email" data-val="true" style="margin-left:auto;margin-right:auto;width:300px;">
         <input type="password" id="Password" name="password" class="form-control" style="margin-left:auto;margin-right:auto;width:300px;" placeholder="Password" required=""><br />
-        <input class="btn btn-lg btn-dark btn-lg btn-block" type="submit" value="Sign in" style="margin-left:auto;margin-right:auto;width:302px;">
+        <input class="btn btn-lg shadow" type="submit" value="Sign in" style="margin-left:auto;margin-right:auto;width:302px;background-color:#50e8a4;color:white;">
     </form>
 </div>
 @section Scripts {
