visual fix for reports

--- a/TeamProject/Areas/Admin/Views/Reports/Index.cshtml
+++ b/TeamProject/Areas/Admin/Views/Reports/Index.cshtml
@@ -10,7 +10,7 @@
 {
     <div class="card m-3 shadow-sm">
         <div class="card-header">
-            @report.Title <small class="text-muted">Total</small>
+            @report.Title @*<small class="text-muted">Total</small>*@
         </div>
         <div class="card-body">
             <canvas id="chart-@report.Id"></canvas>
