Added image to erganis court

--- a/TeamProject/Views/Branches/Nearest.cshtml
+++ b/TeamProject/Views/Branches/Nearest.cshtml
@@ -89,8 +89,8 @@
 }
 @section scripts
 {
-    <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
-    @*key=AIzaSyDrnm2ptgfajjtlCfM97wat7Jsx5KZ0UoA&*@
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDrnm2ptgfajjtlCfM97wat7Jsx5KZ0UoA&libraries=places"  ></script>
+   
     <script>
         var mapzoom = 12;
         var locations = [@Html.Raw(@listOfBranches)];
