--- a/TeamProject/Views/Home/Index.cshtml
+++ b/TeamProject/Views/Home/Index.cshtml
@@ -152,7 +152,7 @@
                     <div class="text">
                         <span>Check Our Code on Github.</span>
                     </div>
-                    <a href="https://github.com/session">Follow Us.</a>
+                    <a href="https://github.com/CortoMaltese3/TeamProject">Follow Us.</a>
                 </div>
             </div>
         </div>
