--- a/TeamProject/Views/Shared/_LayoutJoin.cshtml
+++ b/TeamProject/Views/Shared/_LayoutJoin.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="accept-language" content="el-GR">
     <title>@ViewBag.Title</title>
-    <link rel="stylesheet" type="text/css" href="~/Content/Join/css/Join.css"
+    <link rel="stylesheet" type="text/css" href="~/Content/Join/css/Join.css" />
     <link rel="stylesheet" type="text/css" href="~/Content/Join/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="~/Content/Join/fonts/Linearicons-Free-v1.0.0/icon-font.min.css">
     <link rel="stylesheet" type="text/css" href="~/Content/Join/fonts/iconic/css/material-design-iconic-font.min.css">
@@ -15,7 +15,6 @@
     <link rel="stylesheet" type="text/css" href="~/Content/Join/vendor/select2/select2.min.css">
     <link rel="stylesheet" type="text/css" href="~/Content/Join/vendor/daterangepicker/daterangepicker.css">
     <link rel="stylesheet" type="text/css" href="~/Content/Join/css/util.css">
-    <link rel="stylesheet" type="text/css" href="~/Content/Join/css/main.css">
 </head>
 <body style="background-color: #999999;">
 
