--- a/TeamProject/Views/Shared/_LoginPartial.cshtml
+++ b/TeamProject/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using TeamProject.Models;
-@{ 
+@{
     User user = Session["user"] as User;
 }
 <ul class="navbar-nav ml-auto">
@@ -9,7 +9,7 @@
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Welcome, @user.Firstname!
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <div class="dropdown-menu" id="Dropdown" aria-labelledby="navbarDropdown" style="opacity:1!important">
                 @Html.ActionLink("Bookings", "Index", "UserBooking", new { area = "" }, new { @class = "dropdown-item" })
                 <div class="dropdown-divider"></div>
                 @Html.ActionLink("Logout", "Logout", "Login", new { area = "" }, new { @class = "dropdown-item" })
