added delete timeslots button

--- a/TeamProject/Areas/Admin/Views/TimeSlots/Details.cshtml
+++ b/TeamProject/Areas/Admin/Views/TimeSlots/Details.cshtml
@@ -46,5 +46,6 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Delete", "Delete", new { id = Model.Id }) |
     @Html.ActionLink("Back to TimeSlots", "Index", new { id = Model.CourtId })
 </p>
