--- a/TeamProject/Views/Shared/_FooterPartial.cshtml
+++ b/TeamProject/Views/Shared/_FooterPartial.cshtml
@@ -7,7 +7,7 @@
 
             <div class="col-md-2 mb-3">
                 <h6 class="text-uppercase font-weight-bold">
-                    @Html.ActionLink("Courts", "Index", "Courts", new { area = "" })
+                    @Html.ActionLink("Courts", "Index", "Courts")
                 </h6>
             </div>
             <!-- Grid column -->
