--- a/TeamProject/Views/Shared/_LoginPartial.cshtml
+++ b/TeamProject/Views/Shared/_LoginPartial.cshtml
@@ -9,7 +9,7 @@
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Welcome, @user.Firstname!
             </a>
-            <div class="dropdown-menu" id="Dropdown" aria-labelledby="navbarDropdown" style="opacity:1!important">
+            <div class="dropdown-menu" id="Dropdown" aria-labelledby="navbarDropdown">
                 @Html.ActionLink("Bookings", "Index", "UserBooking", new { area = "" }, new { @class = "dropdown-item" })
                 <div class="dropdown-divider"></div>
                 @Html.ActionLink("Logout", "Logout", "Login", new { area = "" }, new { @class = "dropdown-item" })
