--- a/TeamProject/Views/UserBooking/Index.cshtml
+++ b/TeamProject/Views/UserBooking/Index.cshtml
@@ -8,17 +8,16 @@
 
 @foreach (var booking in Model)
 {
-    <div class="container-fluid text-center" style="height:500px;">
-        <div class="border-bottom">
+        <div class=" border rounded shadow-lg mt-3 text-center">
             <br />
-            <br /><br /><br />
+            
             <div> You have booked <strong> @booking.Court.Name </strong> at <strong>@booking.BookedAt</strong>.</div>
             <br />
             <span>Your booking number is <strong>@booking.BookKey</strong>.</span>
             <br /> <br />
-            <span > You can the court information @Html.ActionLink("here.", "Details", "Courts", new { id = booking.CourtId }, null) </span>
+            <span > You can find the court information @Html.ActionLink("here.", "Details", "Courts", new { id = booking.CourtId }, null) </span>
+            <br />
             <br />
         </div>
-    </div>
 }
 
