--- a/TeamProject/Areas/Admin/Views/Branches/Index.cshtml
+++ b/TeamProject/Areas/Admin/Views/Branches/Index.cshtml
@@ -56,9 +56,12 @@
             @Html.ActionLink("Details", "Details", new { id = item.Id }) |
             @Html.ActionLink("Delete", "Delete", new { id = item.Id }) |
             @Html.ActionLink("Courts", "Index", "courts", new { id = item.Id }, null) |
-            @Html.ActionLink("Facilities", "ChooseFacilities", "BranchFacilities", new { id = item.Id },null) |
-            @Html.ActionLink("Bookings", "Index", "Bookings", new { id = item.Id },null) |
-            @Html.ActionLink("Reports", "Index","Reports", new { id = item.Id }, null)
+            @Html.ActionLink("Facilities", "ChooseFacilities", "BranchFacilities", new { id = item.Id }, null) |
+            @Html.ActionLink("Reports", "Index", "Reports", new { id = item.Id }, null) |
+            @if (User.IsInRole("Owner"))
+            {
+                 @Html.ActionLink("Bookings", "Index", "Bookings", new { id = item.Id }, null) 
+            }
         </td>
     </tr>
 }
