Minor improvements - tests

--- a/TeamProject/Areas/Admin/Views/Branches/Edit.cshtml
+++ b/TeamProject/Areas/Admin/Views/Branches/Edit.cshtml
@@ -73,6 +73,7 @@
         </div>*@
     @Html.HiddenFor(model => model.Latitude)
     @Html.HiddenFor(model => model.Longitude)
+    @Html.HiddenFor(model => model.ImageBranch)    
 
 
 
