--- a/TeamProject/Views/Courts/Confirmed.cshtml
+++ b/TeamProject/Views/Courts/Confirmed.cshtml
@@ -7,7 +7,7 @@
     <div>
         <br />
         <br /><br /><br />
-        <h2>@Model.User.UserName Thanks for booking.</h2>
+        <h2>@Model.User.UserName, thanks for booking.</h2>
         <br />
         <div> You have book <strong> @Model.Court.Name </strong> at <strong>@Model.BookedAt</strong></div>
         <br />
